<resources>
    <string name="app_name">COMP90018_InstaViewer</string>
    <string name="firebase_web_client_id">429047737438-3pas7vpk4qvp3gta19ms82fk7vps5gs6.apps.googleusercontent.com</string>

    <string name="login_status">LoggedIn</string>

    <string name="title_activity_home">HomeActivity</string>

    <!-- Navigation bar resources -->
    <string name="nav_user_feed">User Feed</string>
    <string name="nav_search">Search</string>
    <string name="nav_post">Post</string>
    <string name="nav_activity_feed">Activity Feed</string>
    <string name="nav_profile">User Profile</string>

    <!-- Navigation bar for selecting photo to post -->
    <string name="nav_library">Library</string>
    <string name="nav_camera">Photo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- For photo edit -->
    <string name="action_settings">Settings</string>
    <string name="filters">FILTERS</string>
    <string name="edit">EDIT</string>

    <string name="lbl_brightness">BRIGHTNESS</string>
    <string name="lbl_contrast">CONTRAST</string>
    <string name="lbl_saturation">SATURATION</string>
    <string name="tab_filters">FILTERS</string>
    <string name="tab_edit">EDIT</string>

    <string name="roboto_medium">sans-serif-medium</string>
    <string name="filter_normal">Normal</string>
    <string name="action_save">SAVE</string>
    <string name="action_open">OPEN</string>

</resources>
