<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_user_feed"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_user_feed" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/nav_search" />

    <item
        android:id="@+id/navigation_post"
        android:icon="@drawable/ic_add_circle_black_24dp"
        android:title="@string/nav_post" />

    <item
        android:id="@+id/navigation_activity_feed"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/nav_activity_feed" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/nav_profile" />

</menu>
